[gd_scene load_steps=3 format=3 uid="uid://dcuw6mx1gt4su"]

[ext_resource type="Script" uid="uid://by2mwkxqpmijg" path="res://Scripts/Editing/editing_scene.gd" id="1_lwjxk"]
[ext_resource type="PackedScene" uid="uid://br4jmmu48sjyr" path="res://Scenes/InteractionKeyEditPane.tscn" id="2_u403d"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_lwjxk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BackToMenuButton" type="Button" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -137.0
offset_top = 17.0
offset_right = -23.0
offset_bottom = 48.0
grow_horizontal = 0
text = "Back to Menu
"

[node name="ListOfElementsInSession" type="ItemList" parent="CanvasLayer"]
offset_left = 58.0
offset_top = 36.0
offset_right = 247.0
offset_bottom = 489.0

[node name="EditElementRootContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 407.0
offset_top = 55.0
offset_right = 663.0
offset_bottom = 416.0

[node name="EditElementGridContainer" type="GridContainer" parent="CanvasLayer/EditElementRootContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="CanvasLayer/EditElementRootContainer/EditElementGridContainer"]
layout_mode = 2
text = "Property:"

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/EditElementRootContainer/EditElementGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "12345"

[node name="Label2" type="Label" parent="CanvasLayer/EditElementRootContainer/EditElementGridContainer"]
layout_mode = 2
text = "Property:"

[node name="LineEdit2" type="LineEdit" parent="CanvasLayer/EditElementRootContainer/EditElementGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "12345"

[node name="Label3" type="Label" parent="CanvasLayer/EditElementRootContainer/EditElementGridContainer"]
layout_mode = 2
text = "Property:"

[node name="LineEdit3" type="LineEdit" parent="CanvasLayer/EditElementRootContainer/EditElementGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "12345"

[node name="Control" parent="CanvasLayer/EditElementRootContainer" instance=ExtResource("2_u403d")]
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="CanvasLayer/EditElementRootContainer"]
custom_minimum_size = Vector2(256, 256)
layout_mode = 2
size_flags_horizontal = 0

[node name="Button" type="Button" parent="CanvasLayer/EditElementRootContainer"]
layout_mode = 2
text = "Delete Element"

[node name="Control2" parent="CanvasLayer/EditElementRootContainer" instance=ExtResource("2_u403d")]
layout_mode = 2

[node name="NewElementButtonContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 83.0
offset_top = 497.0
offset_right = 217.0
offset_bottom = 645.0

[node name="AddSubliminalButton" type="Button" parent="CanvasLayer/NewElementButtonContainer"]
layout_mode = 2
text = "New Subliminal"

[node name="AddInteractButton" type="Button" parent="CanvasLayer/NewElementButtonContainer"]
layout_mode = 2
text = "New Interact"

[node name="AddAudioButton" type="Button" parent="CanvasLayer/NewElementButtonContainer"]
layout_mode = 2
text = "New Audio"

[node name="AddAudioGenButton" type="Button" parent="CanvasLayer/NewElementButtonContainer"]
layout_mode = 2
text = "New AudioGen"

[node name="SaveSessionButton" type="Button" parent="CanvasLayer"]
offset_left = 1017.0
offset_top = 66.0
offset_right = 1124.0
offset_bottom = 97.0
text = "Save Session
"

[node name="NewSessionButton" type="Button" parent="CanvasLayer"]
offset_left = 1017.0
offset_top = 145.0
offset_right = 1124.0
offset_bottom = 176.0
text = "New Session
"

[node name="NewSessionConfirmationDialog" type="ConfirmationDialog" parent="CanvasLayer/NewSessionButton"]
title = "New Session"
initial_position = 2
size = Vector2i(444, 100)
dialog_text = "Discard current session and start a new empty session?"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="CanvasLayer/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
[connection signal="item_selected" from="CanvasLayer/ListOfElementsInSession" to="." method="_on_list_of_elements_in_session_item_selected"]
[connection signal="pressed" from="CanvasLayer/NewElementButtonContainer/AddSubliminalButton" to="." method="_on_add_subliminal_button_pressed"]
[connection signal="pressed" from="CanvasLayer/NewElementButtonContainer/AddInteractButton" to="." method="_on_add_interact_button_pressed"]
[connection signal="pressed" from="CanvasLayer/NewElementButtonContainer/AddAudioButton" to="." method="_on_add_audio_button_pressed"]
[connection signal="pressed" from="CanvasLayer/NewElementButtonContainer/AddAudioGenButton" to="." method="_on_add_audio_gen_button_pressed"]
[connection signal="pressed" from="CanvasLayer/SaveSessionButton" to="." method="_on_save_session_button_pressed"]
[connection signal="pressed" from="CanvasLayer/NewSessionButton" to="." method="_on_new_session_button_pressed"]
[connection signal="confirmed" from="CanvasLayer/NewSessionButton/NewSessionConfirmationDialog" to="." method="_on_new_session_confirmation_dialog_confirmed"]
